# argus-lite

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TODO.md  action.yml  architecture.md  docker-compose.yml  install.sh  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: argus-example.yml  ci.yml  pages.yml
docs/: agent-guide.md  api-reference.md  cli-reference.md  configuration.md  getting-started.md  installation.md
docs/skills/: built-in-skills.md  custom-skills.md  overview.md
examples/: full_scan.yaml  quick_scan.yaml
site/: index.html
src/argus_lite/: __main__.py  cli.py
tests/: conftest.py  test_agent.py  test_agent_v3.py  test_ai_analyzer.py  test_attack_graph.py  test_audit.py  test_auth.py  test_browser.py  test_bulk_scanner.py  test_cli.py  test_concurrent.py  test_config.py  test_correlation.py  test_cve_enricher.py  test_dashboard.py  test_dashboard_api.py  test_dashboard_v2.py  test_deep_audit.py  test_discovery_engine.py  test_environment.py  test_event_bus.py  test_exit_code.py  test_goal_engine.py  test_graph_search.py  test_http_session.py  test_incremental.py  test_integration.py  test_knowledge_base.py  test_meta_learning.py  test_models.py  test_models_ai.py  test_models_bulk.py  test_models_v2.py  test_monitor.py  test_notifier.py  test_orchestrator.py  test_orchestrator_v2.py  test_pattern_learning.py  test_payload_engine.py  test_pipeline.py  (+18 more)
(+163 files in other folders)
